Documentation Api Hotels
